Aside now have fixed width on small devices up to large
New variable: $sm-aside-width.

--- a/assets/dev/sass/_aside.component.scss
+++ b/assets/dev/sass/_aside.component.scss
@@ -1,4 +1,5 @@
 aside {
+  overflow-y: auto;
   position: fixed !important;
   z-index: map-get($z-index, aside);
   top: 0;
@@ -7,12 +8,10 @@ aside {
   display: flex;
   flex-direction: column;
 
-  width: $xs-aside-width;
   height: 100vh;
   padding-top: $xs-padding-top;
   padding-bottom: $xs-padding-bottom;
 
-  transform: translateX(-$xs-aside-width);
   text-align: right;
 
   color: $aside-font-color-primary;
@@ -25,32 +24,15 @@ aside {
   }
 }
 
-aside,
-main {
-  transition: $aside-transition;
-}
-
-body {
-  // moved to #wrapper
-  // overflow-x: hidden;
-  &.aside-visible {
-    aside {
-      transform: translateX(0);
-    }
-    main {
-      transform: translateX($xs-aside-width);
-    }
-  }
-}
-
 .website-logo {
   width: 80px;
   margin-left: 1rem;
 }
 
 .website-title {
-  color: #fff;
   text-transform: capitalize;
+
+  color: #fff;
 }
 
 .website-subtitle {
@@ -66,14 +48,14 @@ body {
     align-items: center;
   }
   a {
+    font-size: 1.2rem;
+
     padding-top: 1rem;
     padding-bottom: 1rem;
-    font-size: 1.2rem;
 
     color: $aside-font-color-primary;
     &:hover {
       text-decoration: none;
-
       &:not(.active) {
         color: $main-color-primary;
       }
@@ -86,8 +68,9 @@ body {
 }
 
 .external-links {
-  display: flex;
-  justify-content: space-around;
-
   font-size: 2rem;
+
+  display: flex;
+
+  justify-content: space-around;
 }
