--- a/assets/dev/sass/_variables.scss
+++ b/assets/dev/sass/_variables.scss
@@ -17,11 +17,9 @@ $lg-section-padding: 3rem;
 $section-margin-top: 4rem;
 
 
-// TODO: fixed width with @media
-// Why? On Tablets and other long devices, but smaller
-// then 992px, aside is just o big, where there is no
-// content to cover it
+// aside width
 $xs-aside-width: 70vw;
+$sm-aside-width: 16rem;
 
 
 /* new layout colors */
